Remove version dropdown if only 1 version Add a collapse behavior Add groovy script to fill empty titles based on the parent page Fix on the setBoost script Fix on the SEO script Allow to add lists on some area

--- a/src/main/resources/css/academy.css
+++ b/src/main/resources/css/academy.css
@@ -1693,7 +1693,7 @@ ul.nav.bs-docs-sidenav.sister {
     text-transform: uppercase;
 }
 .control-label {
-    white-space: nowrap;
+    /*white-space: nowrap;*/
 }
 #main {
     margin-top: 126px;
